# Handles the layout as well as text layout, font decoding and 
# image layout / image decoding. 
# 
# Intermediary crate for if you need font and image loading,
# these cannot be in the core or css crates, because that would make 
# those crate unnecessarily heavy

[package]
name = "azul-layout"
version = "0.0.5"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MPL-2.0"
description = "Layout solver + font and image loader the Azul GUI framework"
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2021"
resolver = "2"
autoexamples = true

[dependencies]
azul-css                = { version = "0.0.5", path = "../css", default-features = false, features = ["parser"] }
azul-core               = { version = "0.0.5", path = "../core", default-features = false }
image                   = { version = "0.25", default-features = false, optional = true }
rust-fontconfig         = { version = "1.2.1", default-features = false, optional = true }
serde                   = { version = "1.0", features = ["derive"] }
accesskit               = { version = "0.21.1", default-features = false, optional = true }
tinyvec                 = { version = "1.9.0", default-features = false, optional = true  }
lyon                    = { version = "1.0.1",  default-features = false, optional = true }
usvg                    = { version = "0.45.0",   default-features = false, optional = true }
resvg                   = { version = "0.45.0",   default-features = false, optional = true }
tiny-skia               = { version = "0.11.4",    default-features = false, optional = true, features = ["std", "simd", "png-format"] }
geo-booleanop           = { version = "0.3.2", default-features = false, optional = true }
geo                     = { version = "0.31.0", default-features = false, optional = true }
roxmltree               = { version = "0.21.1",   default-features = false, optional = true }
xmlwriter               = { version = "0.1.0",    default-features = false, optional = true }
xmlparser               = { version = "0.13.6",   default-features = false, optional = true }
gl-context-loader       = { version = "0.1.8", default-features = false, optional = true }

# text3 features
unicode-bidi            = { version = "0.3.18", default-features = false, optional = true, features = ["hardcoded-data"]}
thiserror = { version = "2.0.17", default-features = false }
hyphenation             = { version = "0.8.4", default-features = false, features = ["embed_all"], optional = true }
unicode-segmentation    = { version = "1.12.0", default-features = false, optional = true }
unicode-normalization   = { version = "0.1.24",  default-features = false, optional = true }
allsorts = { version = "0.16.1", default-features = false, features = ["flate2_rust"], optional = true }
lru = { version = "0.16.1", default-features = false }
taffy = { version = "0.9.1", default-features = false, features = ["std", "flexbox", "grid", "alloc", "taffy_tree", "block_layout", "calc", "content_size", "detailed_layout_info"] }
base64 = "0.22.1"

[features]
# Default: Full layout engine with text, fonts, SVG, images, accessibility
default = ["std", "text_layout", "text_layout_hyphenation", "font_loading", "svg", "image_decoding", "cpurender", "a11y"]

# Standard library support
std = ["azul-core/std"]

# Basic text shaping (unicode support, allsorts font parsing)
# Does NOT include hyphenation (saves ~25 dependencies)
text_layout = [
    "dep:unicode-normalization",
    "dep:allsorts",
    "dep:tinyvec",
    "dep:unicode-segmentation",
    "dep:unicode-bidi"
]

# Automatic hyphenation (adds ~25 deps: bincode, fst, hyphenation_commons, pocket-resources)
text_layout_hyphenation = ["text_layout", "dep:hyphenation"]

# PDF text operations (requires text_layout)
pdf = ["text_layout"]

# System font discovery (rust-fontconfig minimal, no parsing)
font_loading = ["dep:rust-fontconfig", "rust-fontconfig/std", "rust-fontconfig/parsing"]

# Font introspection (adds allsorts via rust-fontconfig/parsing)
font_parsing = ["font_loading", "rust-fontconfig/parsing"]

# Image decoding support (image crate)
image_decoding = ["dep:image"]

# Individual image format features (require image_decoding)
gif = ["image_decoding", "image/gif"]
jpeg = ["image_decoding", "image/jpeg"]
png = ["image_decoding", "image/png"]
tiff = ["image_decoding", "image/tiff"]
bmp = ["image_decoding", "image/bmp"]
ico = ["image_decoding", "image/ico"]
tga = ["image_decoding", "image/tga"]
hdr = ["image_decoding", "image/hdr"]
webp = ["image_decoding", "image/webp"]
pnm = ["image_decoding", "image/pnm"]

# XML parsing support (for SVG and font configs)
xml = ["dep:roxmltree", "dep:xmlwriter", "dep:xmlparser"]

# SVG rendering support (lyon, usvg can convert text to outlines)
svg = [
    "dep:lyon",
    "dep:tiny-skia",
    "dep:usvg",
    "dep:resvg",
    "xml",
    "dep:geo-booleanop",
    "dep:geo",
    "dep:gl-context-loader"
]

# CPU-based rendering (tiny-skia, requires allsorts for text)
cpurender = ["dep:tiny-skia", "dep:allsorts", "dep:gl-context-loader"]

# Accessibility support (accesskit)
a11y = ["dep:accesskit"]
