# Handles the layout as well as text layout, font decoding and 
# image layout / image decoding. 
# 
# Intermediary crate for if you need font and image loading,
# these cannot be in the core or css crates, because that would make 
# those crate unnecessarily heavy

[package]
name = "azul-layout"
version = "0.0.7"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MPL-2.0"
description = "Layout solver + font and image loader the Azul GUI framework"
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2021"
resolver = "2"
autoexamples = true

[dependencies]
azul-css                = { version = "0.0.7", path = "../css", default-features = false, features = ["parser"] }
azul-core               = { version = "0.0.7", path = "../core", default-features = false }
image                   = { version = "0.25", default-features = false, optional = true }
# Explicit override to disable SIMD features that are broken on some Rust versions
# See: https://github.com/image-rs/image/issues/2705
zune-jpeg               = { version = "0.4", default-features = false, features = ["std"], optional = true }
rust-fontconfig         = { version = "2.0.0", default-features = false, optional = true }
serde                   = { version = "1.0", features = ["derive"] }
accesskit               = { version = "0.21.1", default-features = false, optional = true }
tinyvec                 = { version = "1.9.0", default-features = false, optional = true  }
lyon                    = { version = "1.0.1",  default-features = false, optional = true }
usvg                    = { version = "0.45.0",   default-features = false, optional = true }
resvg                   = { version = "0.45.0",   default-features = false, optional = true }
tiny-skia               = { version = "0.11.4",    default-features = false, optional = true, features = ["std", "simd", "png-format"] }
geo-booleanop           = { version = "0.3.2", default-features = false, optional = true }
geo                     = { version = "0.31.0", default-features = false, optional = true }
roxmltree               = { version = "0.21.1",   default-features = false, optional = true }
xmlwriter               = { version = "0.1.0",    default-features = false, optional = true }
xmlparser               = { version = "0.13.6",   default-features = false, optional = true }
gl-context-loader       = { version = "0.1.8", default-features = false, optional = true }

# text3 features
unicode-bidi            = { version = "0.3.18", default-features = false, optional = true, features = ["hardcoded-data"]}
thiserror = { version = "2.0.17", default-features = false }
hyphenation             = { version = "0.8.4", default-features = false, features = ["embed_all"], optional = true }
unicode-segmentation    = { version = "1.12.0", default-features = false, optional = true }
unicode-normalization   = { version = "0.1.24",  default-features = false, optional = true }
allsorts = { version = "0.16.1", default-features = false, features = ["flate2_rust"], optional = true }
lru = { version = "0.16.1", default-features = false }
taffy = { version = "0.9.1", default-features = false, features = ["std", "flexbox", "grid", "alloc", "taffy_tree", "block_layout", "calc", "content_size", "detailed_layout_info"] }
base64 = "0.22.1"
strfmt = { version = "0.2", optional = true }
tfd = { version = "0.1", optional = true }

# ICU4X dependencies for internationalization
# compiled_data is enabled by default to include all locale data
icu = { version = "2.1", optional = true }
icu_provider_blob = { version = "2.1", default-features = false, optional = true }
writeable = { version = "0.6", default-features = false, optional = true }

# Optional: chrono for getting current date/time
chrono = { version = "0.4", default-features = false, features = ["std", "clock"], optional = true }

# Fluent localization (Project Fluent)
fluent = { version = "0.17", default-features = false, optional = true }
fluent-syntax = { version = "0.12", default-features = false, optional = true }
unic-langid = { version = "0.9", default-features = false, optional = true }
intl-memoizer = { version = "0.5", default-features = false, optional = true }

# ZIP file support for language packs
zip = { version = "2.1", default-features = false, features = ["deflate"], optional = true }

# Material Icons font (embedded TTF, Apache 2.0 licensed)
material-icons = { version = "0.3", optional = true }

# HTTP client for downloading language packs
ureq = { version = "2.9", default-features = false, features = ["tls"], optional = true }

# URL parsing
url = { version = "2.5", default-features = false, optional = true }

# JSON parsing
serde_json = { version = "1.0", default-features = false, features = ["std"], optional = true }

# Platform-specific user directories (home, config, cache, etc.)
dirs = { version = "6.0", default-features = false, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS Foundation ICU backend — enabled via the `icu_macos` feature
objc2 = { version = "0.6.0", optional = true }
objc2-foundation = { version = "0.3.0", default-features = false, optional = true, features = [
    "std",
    "NSArray",
    "NSCalendar",
    "NSDate",
    "NSDateFormatter",
    "NSListFormatter",
    "NSLocale",
    "NSNumberFormatter",
    "NSObjCRuntime",
    "NSString",
] }

[features]
# Default: Full layout engine with text, fonts, SVG, images, accessibility
# Uses multithreaded font loading for faster startup on desktop
default = ["std", "text_layout", "text_layout_hyphenation", "font_loading_multithreaded", "svg", "image_decoding", "cpurender", "a11y", "widgets", "extra", "icons"]

# Standard library support
std = ["azul-core/std"]

# String formatting utilities (strfmt crate)
strfmt = ["dep:strfmt", "std"]

# Widget support (button, text_input, checkbox, etc.)
widgets = ["text_layout", "strfmt"]

# Extra APIs (native dialogs, file operations)
extra = ["dep:tfd", "dep:dirs"]

# Basic text shaping (unicode support, allsorts font parsing)
# Requires font_loading for font discovery (FcFontCache)
# Does NOT include hyphenation (saves ~25 dependencies)
text_layout = [
    "std",
    "font_loading",
    "dep:unicode-normalization",
    "dep:allsorts",
    "dep:tinyvec",
    "dep:unicode-segmentation",
    "dep:unicode-bidi"
]

# Automatic hyphenation (adds ~25 deps: bincode, fst, hyphenation_commons, pocket-resources)
text_layout_hyphenation = ["text_layout", "dep:hyphenation"]

# PDF text operations (requires text_layout)
pdf = ["text_layout"]

# System font discovery (rust-fontconfig minimal, no parsing)
font_loading = ["dep:rust-fontconfig", "rust-fontconfig/std", "rust-fontconfig/parsing", "rust-fontconfig/mmapio"]

# Multithreading for font cache building (faster on desktop, not available on WASM)
font_loading_multithreaded = ["font_loading", "rust-fontconfig/multithreading"]

# Font introspection (adds allsorts via rust-fontconfig/parsing)
font_parsing = ["font_loading", "rust-fontconfig/parsing"]

# Image decoding support (image crate)
image_decoding = ["dep:image"]

# Individual image format features (require image_decoding)
gif = ["image_decoding", "image/gif"]
jpeg = ["image_decoding", "image/jpeg", "dep:zune-jpeg"]
png = ["image_decoding", "image/png"]
tiff = ["image_decoding", "image/tiff"]
bmp = ["image_decoding", "image/bmp"]
ico = ["image_decoding", "image/ico"]
tga = ["image_decoding", "image/tga"]
hdr = ["image_decoding", "image/hdr"]
webp = ["image_decoding", "image/webp"]
pnm = ["image_decoding", "image/pnm"]

# XML parsing support (for SVG and font configs)
xml = ["dep:roxmltree", "dep:xmlwriter", "dep:xmlparser"]

# SVG rendering support (lyon, usvg can convert text to outlines)
svg = [
    "dep:lyon",
    "dep:tiny-skia",
    "dep:usvg",
    "dep:resvg",
    "xml",
    "dep:geo-booleanop",
    "dep:geo",
    "dep:gl-context-loader"
]

# CPU-based rendering (tiny-skia, requires allsorts for text)
cpurender = ["dep:tiny-skia", "dep:allsorts", "dep:gl-context-loader"]

# Accessibility support (accesskit)
a11y = ["dep:accesskit"]

# ICU4X internationalization support (number/date/list formatting, pluralization)
icu = ["dep:icu", "dep:icu_provider_blob", "dep:writeable", "std"]

# macOS Foundation ICU backend — uses NSNumberFormatter / NSDateFormatter /
# NSListFormatter instead of bundling ICU4X data blobs (~3.3 MB savings).
# On non-macOS platforms this feature is a no-op.
icu_macos = ["objc2", "objc2-foundation"]

# Add chrono support for Date.now() style APIs (optional with ICU)
icu_chrono = ["icu", "dep:chrono"]

# Fluent localization support (Project Fluent FTL files, language packs)
fluent = ["dep:fluent", "dep:fluent-syntax", "dep:unic-langid", "dep:intl-memoizer", "zip_support", "strfmt", "std"]

# HTTP client support for downloading resources
http = ["dep:ureq", "dep:url", "std"]

# ZIP file manipulation (standalone, for C API)
zip_support = ["dep:zip", "std"]

# JSON parsing support
json = ["dep:serde_json", "std", "azul-core/serde-json"]

# Icon provider support (material icons, icon packs from fonts or ZIP files)
icons = ["std", "zip_support", "dep:material-icons"]
