[package]
name = "azul-workbench"
version = "0.0.3"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MPL-2.0"
description = "GUI (and CLI) toolkit for building Azul applications"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface"]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2021"
autoexamples = false

[dependencies]
azul               = { path = "../api/rust", version = "1.0.0-beta1", default-features = false }
