[package]
name = "azul"
version = "0.0.1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Azul GUI is a free, functional, immediate-mode GUI framework
    for rapid development of desktop applications written in Rust,
    supported by the Mozilla WebRender rendering engine
'''
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface", "svg", "graphics" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
readme = "../README.md"
exclude = ["../assets/*", "../doc/*", "../examples/*"]
autoexamples = false
edition = "2018"
build = "build.rs"
links = "azul"

[lib]
path = "lib.rs"

[dependencies]
azul-dll = { version = "0.0.1", path = "../../azul-dll", default-features = false, optional = true }

[features]
default = []
link_static = ["azul-dll", "azul-dll/std"]
no_std = ["azul-dll", "azul-dll/css_parser", "azul-dll/text_layout"] # currently blocked on gleam, allsorts, rayon and webrender not being no_std
minifb = ["azul-dll", "azul-dll/std"]