[package]
name = "azul"
version = "1.0.0-beta1"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Azul GUI is a free, functional, reactive GUI framework
    for rapid development of desktop applications written in Rust and C,
    using the Mozilla WebRender rendering engine.
'''
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user-interface", "svg", "graphics" ]
categories = ["gui"]
repository = "https://github.com/fschutt/azul"
readme = "../../README.md"
exclude = ["../assets/*", "../doc/*", "../examples/*"]
autoexamples = false
edition = "2018"
build = "build.rs"
links = "azul"

[dependencies]
serde = { version = "1", optional = true, default-features = false }
serde_derive = { version = "1", optional = true, default-features = false }

[dependencies.azul-dll]
version = "0.0.1"
path = "../../azul-dll"
default-features = false
features = ["rlib"]
optional = true

[features]
default = ["link-static"]
serde-support = ["serde_derive", "serde"]
docs_rs = ["link-static"]
link-dynamic = ["azul-dll/link-dynamic"]
link-static = [
    "azul-dll",
    # enable all features of azul-dll
    "azul-dll/std",
    "azul-dll/logging",
    "azul-dll/css_parser",
    "azul-dll/font_loading",
    "azul-dll/text_layout",
    "azul-dll/svg",
    "azul-dll/xml",
    "azul-dll/image_loading",
    "azul-dll/gif",
    "azul-dll/jpeg",
    "azul-dll/png",
    "azul-dll/tiff",
    "azul-dll/bmp",
    "azul-dll/ico",
    "azul-dll/tga",
    "azul-dll/hdr",
    "azul-dll/dxt",
    "azul-dll/webp",
    "azul-dll/pnm",
    "azul-dll/link-static"
]
# # currently blocked on gleam, allsorts, rayon and webrender not being no_std
# no_std = ["link-static", "azul-dll/css_parser", "azul-dll/text_layout"]
# minifb = ["azul-dll/std", "link-static"]

[package.metadata.docs.rs]
features = ["docs_rs"]
