[package]
name = "azul-core"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Common datatypes used for the Azul document object model, shared across all azul-* crates
'''
documentation = "https://docs.rs/azul-core"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user interface"]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
readme = "README.md"
exclude = ["assets/*", "doc/*", "examples/*"]
autoexamples = false
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]
path = "../../azul-core/lib.rs"

[dependencies]
gleam                   = { version = "0.6"                                                                         }
azul-css                = { version = "0.1.0",                      path = "../azul-css"                            }
azul-css-parser         = { version = "0.1.0",  optional = true,    path = "../azul-css-parser"                     }

[features]
css_parser = ["azul-css-parser"]
