[package]
name = "azul-css-parser"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    CSS-compatible parser for the Azul GUI framework
'''
documentation = "https://docs.rs/azul"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
readme = "README.md"
exclude = ["assets/*", "doc/*", "examples/*"]
autoexamples = false

[lib]
path = "../../azul-css-parser/lib.rs"

[dependencies]
azul-css                = { path = "../azul-css",   default-features = false }
azul-simplecss          = { version = "0.1.1",      default-features = false }
serde                   = { version = "1",          default-features = false, optional = true }

[features]
default = []
serde_serialization = ["serde"]
