[package]
name = "azul-layout"
version = "0.1.0"
authors = ["Emil Sjölander <emil@visly.app>", "fschutt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Flexbox layout solver the Azul GUI framework
'''
documentation = "https://docs.rs/azul"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
readme = "LICENSE.txt"
exclude = ["assets/*", "doc/*", "examples/*"]
autoexamples = false
edition = "2018"

[lib]
path = "../../azul-layout/lib.rs"

[dependencies]
azul-core           = { version = "0.1.0", path = "../azul-core" }
azul-css            = { version = "0.1.0", path = "../azul-css"  }
azul-text-layout    = { version = "0.1.0", path = "../azul-text-layout", optional = true }

[features]
default = []
text_layout = ["azul-text-layout"]
