[package]
name = "azul-web"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = "Web API implementation for the Azul GUI toolkit"
documentation = "https://docs.rs/azul"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user interface", "svg", "graphics" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
readme = "../README.md"
exclude = ["../assets/*", "../doc/*", "../examples/*"]
autoexamples = false
edition = "2018"

[lib]
path = "../../azul-web/lib.rs"

[dependencies]
azul-core = { version = "0.1.0", path = "../azul-core", default-features = false }
azul-css = { version = "0.1.0", path = "../azul-css", default-features = false }