[package]
name = "azul-widgets"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Builtin widgets for the Azul GUI framework (buttons, checkboxes, labels, etc.)
'''
documentation = "https://docs.rs/azul-widgets"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user interface"]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
readme = "README.md"
exclude = ["../assets/*", "../doc/*", "../examples/*"]
autoexamples = false

[lib]
path = "../../azul-widgets/lib.rs"

[dependencies]
azul-core               = { version = "0.1.0",  default-features = false,                   path = "../azul-core" }
azul-css                = { version = "0.1.0",  default-features = false,                   path = "../azul-css"  }
gleam                   = { version = "0.6",    default-features = false, optional = true                         }
lyon                    = { version = "0.11.0", default-features = false, optional = true                         }
usvg                    = { version = "0.3.0",  default-features = false, optional = true                         }
serde_derive            = { version = "1",      default-features = false, optional = true                         }
serde                   = { version = "1",      default-features = false, optional = true                         }
stb_truetype            = { version = "0.2.6",  default-features = false, optional = true                         }

[features]
default = []
# The SVG rendering module is pretty huge since it needs lyon - if you don't use
# SVG rendering in your app, you can turn this off to increase compilation
# speed and decrease your binary size
svg = ["lyon", "gleam"]
# This is for activating **parsing** of SVG files. If you, for example, just
# want to draw shapes on the screen, you do not need to activate this feature,
# this is just for parsing the SVG from a file.
svg_parsing = ["usvg", "svg"]
# Necessary for getting the glyphs out of a TTF font (until harfbuzz / etc. would implement something like this)
fonts = ["stb_truetype"]
# For serializing / deserializing CSS colors using serde
serde_serialization = ["serde_derive", "serde"]
