[package]
name = "azul-widgets"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Builtin widgets for the Azul GUI framework (buttons, checkboxes, labels, etc.)
'''
documentation = "https://docs.rs/azul-widgets"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user interface"]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
readme = "README.md"
exclude = ["../assets/*", "../doc/*", "../examples/*"]
autoexamples = false

[lib]
path = "../../azul-widgets/lib.rs"

[dependencies]
azul-core               = { version = "0.1.0",                  path = "../azul-core"                             }
azul-css                = { version = "0.1.0",                  path = "../azul-css"                              }
gleam                   = { version = "0.6",                    optional = true                                   }
azul-dependencies       = { version = "0.1.0",                  optional = true,        git = "https://github.com/maps4print/azul-dependencies", rev = "00e6e0ffacb008244d196df246db48f463a59992" }
serde_derive            = { version = "1",                    optional = true }
serde                   = { version = "1",                    optional = true }

[features]
default = []
# The SVG rendering module is pretty huge since it needs lyon - if you don't use
# SVG rendering in your app, you can turn this off to increase compilation
# speed and decrease your binary size
svg = ["azul-dependencies/svg", "gleam"]
# This is for activating **parsing** of SVG files. If you, for example, just
# want to draw shapes on the screen, you do not need to activate this feature,
# this is just for parsing the SVG from a file.
svg_parsing = ["azul-dependencies/svg_parsing", "svg"]
# For serializing / deserializing CSS colors using serde
serde_serialization = ["azul-dependencies/serde_serialization", "serde_derive", "serde"]
